--- a/index.html
+++ b/index.html
@@ -210,5 +210,9 @@ document.getElementById("limitInput").addEventListener("input", update);
 update();
 </script>
 
+    <ul>
+    <li><a href="https://y-ogawa210.github.io/tools-site/">その他ツールの一覧はこちら</a></li>
+  </ul>
 </body>
+
 </html>
